# lead-reproduction

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
docs/: feature-engineering-rules.md  m1-plan.md  m2-plan.md  m3-50-50-ensemble.json  m3-plan.md  m3-report.md  m4-evaluation-report.md  m4-plan.md  notebooks-map.md  paper-notes.md  professor-summary.md  reproduction-report.md  unknowns.md  workflow.md
notebooks/: 01-m2-baseline-pipeline.ipynb  02-m2-clusterno.ipynb  03-m2-value-change.ipynb  04-m2-savgol-dayofyear.ipynb  05-m2-integration.ipynb  06-m3-baseline.ipynb  07-m3-split-causality.ipynb  08-m3-budslab.ipynb  09-m3-ensemble.ipynb  10-m3-postprocessing.ipynb  ablation_c_only.py  ablations_m25.py  m3_exploration.py  submission_m25.py
scripts/: diagnose_bdg2_timezone_alignment.py  diagnose_phaseE_step3_smoke_attribution.py  explore_bdg2.py  phaseE_transfer.py  run_bdg2_eda.py  run_m3_3_budslab.py  run_m3_4_ensemble.py  run_m3_50_50_ensemble.py  run_m3_5_postprocessing.py  run_m3_split_causality.py  run_m4_3_timestamp_value_change.py  run_m5_phaseC_tabpfn_spike.py  run_m5_phaseD_foundation_vs_gbdt.py  run_phaseE_step3_bdg2_transfer_smoke.py  run_phaseE_step4a_bdg2_transfer.py  run_phaseE_step4b_tabpfn_vs_gbdt_bdg2.py  run_phaseE_step4c_pooled_powered_fallback.py
tests/: golden_metrics.json  test_bdg2_loader.py  test_call_arity.py  test_label_join_integrity.py  test_m5_phaseD_comparison.py  test_m5_tabpfn_spike.py  test_phaseE_step4_transfer.py  test_public_api.py  test_readme_freshness.py  (+5 more)
(+117 files in other folders)
